Fix text appearing behind Dialog header

--- a/src/styles/components/dialog.styl
+++ b/src/styles/components/dialog.styl
@@ -32,6 +32,7 @@
     overflow: auto
 
     &__header
+      background: $bisque  //Prevent scrolling content from appearing behind the header. TODO: Perhaps a better solution is to not make this position:absolute.
       display: flex
       flex-direction: column
       left: 0
